Add more type hints

--- a/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
+++ b/examples/notebooks/tour-of-beam/reading-and-writing-data.ipynb
@@ -71,7 +71,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R_Yhoc6N_Flg"
+        "id": "R_Yhoc6N_Flg",
+        "outputId": "94144efc-6b65-4eb7-ea72-23fe3e192428",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Install apache-beam with pip.\n",
@@ -81,38 +85,87 @@
         "!mkdir -p data"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 9.0MB 7.4MB/s \n",
+            "\u001b[K     |████████████████████████████████| 153kB 40.0MB/s \n",
+            "\u001b[K     |████████████████████████████████| 17.7MB 236kB/s \n",
+            "\u001b[K     |████████████████████████████████| 61kB 7.0MB/s \n",
+            "\u001b[K     |████████████████████████████████| 61kB 6.9MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.3MB 40.2MB/s \n",
+            "\u001b[K     |████████████████████████████████| 829kB 40.3MB/s \n",
+            "\u001b[K     |████████████████████████████████| 112kB 44.7MB/s \n",
+            "\u001b[?25h  Building wheel for dill (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for avro-python3 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for future (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[31mERROR: multiprocess 0.70.11.1 has requirement dill>=0.3.3, but you'll have dill 0.3.1.1 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: google-colab 1.0.0 has requirement requests~=2.23.0, but you'll have requests 2.25.1 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.8.3 which is incompatible.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sQUUi4H9s-g2"
+        "id": "sQUUi4H9s-g2",
+        "outputId": "da02ce82-61ce-43e2-a5f0-21b06df76bd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile data/my-text-file-1.txt\n",
         "This is just a plain text file, UTF-8 strings are allowed 🎉.\n",
         "Each line in the file is one element in the PCollection."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing data/my-text-file-1.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BWVVeTSOlKug"
+        "id": "BWVVeTSOlKug",
+        "outputId": "2f0ad045-0af3-4ca7-f5a3-1f348b5c1517",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile data/my-text-file-2.txt\n",
         "There are no guarantees on the order of the elements.\n",
         "ฅ^•ﻌ•^ฅ"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing data/my-text-file-2.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NhCws6ncbDJG"
+        "id": "NhCws6ncbDJG",
+        "outputId": "0b5e0dc6-43ee-4786-c1d5-984fd422e445",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile data/penguins.csv\n",
@@ -124,8 +177,16 @@
         "2,0.509090909090909,0.011904761904761862,0.6610169491525424,0.5\n",
         "2,0.6509090909090909,0.38095238095238104,0.9830508474576272,0.8333333333333334"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing data/penguins.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -151,11 +212,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
+          "base_uri": "https://localhost:8080/"
         },
         "id": "xDXdE9uysriw",
-        "outputId": "7944a240-648b-4528-8b3e-460a2db30387"
+        "outputId": "3ef9f7a9-8291-42a1-be03-71e50de266f5"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -168,55 +228,15 @@
         "      | 'Print contents' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:apache_beam.runners.interactive.interactive_environment:Dependencies required for Interactive Beam PCollection visualization are not available, please use: `pip install apache-beam[interactive]` to install necessary dependencies to enable all data visualization features.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "        if (typeof window.interactive_beam_jquery == 'undefined') {\n",
-              "          var jqueryScript = document.createElement('script');\n",
-              "          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n",
-              "          jqueryScript.type = 'text/javascript';\n",
-              "          jqueryScript.onload = function() {\n",
-              "            var datatableScript = document.createElement('script');\n",
-              "            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n",
-              "            datatableScript.type = 'text/javascript';\n",
-              "            datatableScript.onload = function() {\n",
-              "              window.interactive_beam_jquery = jQuery.noConflict(true);\n",
-              "              window.interactive_beam_jquery(document).ready(function($){\n",
-              "                \n",
-              "              });\n",
-              "            }\n",
-              "            document.head.appendChild(datatableScript);\n",
-              "          };\n",
-              "          document.head.appendChild(jqueryScript);\n",
-              "        } else {\n",
-              "          window.interactive_beam_jquery(document).ready(function($){\n",
-              "            \n",
-              "          });\n",
-              "        }"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "There are no guarantees on the order of the elements.\n",
-            "ฅ^•ﻌ•^ฅ\n",
             "This is just a plain text file, UTF-8 strings are allowed 🎉.\n",
-            "Each line in the file is one element in the PCollection.\n"
+            "Each line in the file is one element in the PCollection.\n",
+            "There are no guarantees on the order of the elements.\n",
+            "ฅ^•ﻌ•^ฅ\n"
           ],
           "name": "stdout"
         }
@@ -259,7 +279,7 @@
         "          file_name_suffix='.txt')\n",
         "  )"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -269,13 +289,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8au0yJSd1itt",
-        "outputId": "74b4fdcd-de06-44a4-e249-e0db7fd92095"
+        "outputId": "4822458b-2724-42e9-c71f-280a82d505d6"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/file*.txt"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wR6WY6wOMVhb",
-        "outputId": "1b5848ec-9636-44f8-c5ac-47114ac251a7"
+        "outputId": "f90ae0a1-0cb4-4f25-fa93-10f9de856a95"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -396,7 +416,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8iXqE1CRnn5",
-        "outputId": "4f28f0f9-6ba9-4814-ddab-7fed39e64640"
+        "outputId": "d77fd363-76eb-49ce-8729-82d6cd38cfda"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -406,13 +426,13 @@
         "@beam.ptransform_fn\n",
         "@beam.typehints.with_input_types(beam.pvalue.PBegin)\n",
         "@beam.typehints.with_output_types(int)\n",
-        "def Count(pcollection: beam.PCollection, n: int):\n",
+        "def Count(pbegin: beam.pvalue.PBegin, n: int) -> beam.PCollection[int]:\n",
         "  def count(n: int) -> Iterable[int]:\n",
         "    for i in range(n):\n",
         "      yield i\n",
         "\n",
         "  return (\n",
-        "      pcollection\n",
+        "      pbegin\n",
         "      | 'Create inputs' >> beam.Create([n])\n",
         "      | 'Generate elements' >> beam.FlatMap(count)\n",
         "  )\n",
@@ -426,7 +446,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +491,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywVbJxegaZbo",
-        "outputId": "44fb5e9a-1837-4651-f5df-58a6dce2e377"
+        "outputId": "8dd0fdf3-43e8-47db-8442-ed9e88ef6c95"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -484,7 +504,7 @@
         "@beam.ptransform_fn\n",
         "@beam.typehints.with_input_types(beam.pvalue.PBegin)\n",
         "@beam.typehints.with_output_types(Dict[str, str])\n",
-        "def ReadCsvFiles(pcollection, file_patterns: List[str]):\n",
+        "def ReadCsvFiles(pbegin: beam.pvalue.PBegin, file_patterns: List[str]) -> beam.PCollection[Dict[str, str]]:\n",
         "  def expand_pattern(pattern: str) -> Iterable[str]:\n",
         "    for match_result in beam_fs.match([pattern])[0].metadata_list:\n",
         "      yield match_result.path\n",
@@ -497,7 +517,7 @@
         "        yield dict(row)\n",
         "\n",
         "  return (\n",
-        "      pcollection\n",
+        "      pbegin\n",
         "      | 'Create file patterns' >> beam.Create(file_patterns)\n",
         "      | 'Expand file patterns' >> beam.FlatMap(expand_pattern)\n",
         "      | 'Read CSV lines' >> beam.FlatMap(read_csv_lines)\n",
@@ -512,7 +532,7 @@
         "      | 'Print elements' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,15 +569,15 @@
         },
         "id": "EJ58A0AoV02o",
         "cellView": "form",
-        "outputId": "a8340809-483f-456c-aef6-f4557b459a4e"
+        "outputId": "f932e834-8d65-4ddc-a4f8-1fc825c30b41"
       },
       "source": [
         "#@title Creating the SQLite database\n",
         "import sqlite3\n",
         "\n",
-        "databse_file = \"moon-phases.db\" #@param {type:\"string\"}\n",
+        "database_file = \"moon-phases.db\" #@param {type:\"string\"}\n",
         "\n",
-        "with sqlite3.connect(databse_file) as db:\n",
+        "with sqlite3.connect(database_file) as db:\n",
         "  cursor = db.cursor()\n",
         "\n",
         "  # Create the moon_phases table.\n",
@@ -588,7 +608,7 @@
         "  for row in cursor.fetchall():\n",
         "    print(row)"
       ],
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +651,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bnpwqr-NV5DF",
-        "outputId": "2abf3223-7ba5-4bc2-b4b7-9cf96ff71aca"
+        "outputId": "5f69a99c-c711-47cf-f13a-c780de57f3e6"
       },
       "source": [
         "import apache_beam as beam\n",
@@ -647,7 +667,7 @@
         "  def setup(self):\n",
         "    self.connection = sqlite3.connect(self.database_file)\n",
         "\n",
-        "  def process(self, query: str) -> Iterable[Dict[str, str]]:\n",
+        "  def process(self, query: Tuple[str, List[str]]) -> Iterable[Dict[str, str]]:\n",
         "    table, columns = query\n",
         "    cursor = self.connection.cursor()\n",
         "    cursor.execute(f\"SELECT {','.join(columns)} FROM {table}\")\n",
@@ -660,9 +680,13 @@
         "@beam.ptransform_fn\n",
         "@beam.typehints.with_input_types(beam.pvalue.PBegin)\n",
         "@beam.typehints.with_output_types(Dict[str, str])\n",
-        "def SelectFromSQLite(pcollection, database_file: str, queries: List[Tuple[str, List[str]]]):\n",
+        "def SelectFromSQLite(\n",
+        "    pbegin: beam.pvalue.PBegin,\n",
+        "    database_file: str,\n",
+        "    queries: List[Tuple[str, List[str]]],\n",
+        ") -> beam.PCollection[Dict[str, str]]:\n",
         "  return (\n",
-        "      pcollection\n",
+        "      pbegin\n",
         "      | 'Create None' >> beam.Create(queries)\n",
         "      | 'SQLite SELECT' >> beam.ParDo(SQLiteSelect(database_file))\n",
         "  )\n",
@@ -681,7 +705,7 @@
         "      | 'Print rows' >> beam.Map(print)\n",
         "  )"
       ],
-      "execution_count": 13,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,7 +810,12 @@
         "@beam.ptransform_fn\n",
         "@beam.typehints.with_input_types(str)\n",
         "@beam.typehints.with_output_types(beam.pvalue.PDone)\n",
-        "def WriteBatchesToFiles(pcollection, file_name_prefix: str, file_name_suffix: str = '.txt', batch_size: int = 100):\n",
+        "def WriteBatchesToFiles(\n",
+        "    pcollection: beam.PCollection[str],\n",
+        "    file_name_prefix: str,\n",
+        "    file_name_suffix: str = '.txt',\n",
+        "    batch_size: int = 100,\n",
+        ") -> beam.pvalue.PDone:\n",
         "  def expand_pattern(pattern):\n",
         "    for match_result in beam_fs.match([pattern])[0].metadata_list:\n",
         "      yield match_result.path\n",
@@ -837,23 +866,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CUklk4JtEbft",
-        "outputId": "b7a798a3-bf03-4fc0-9888-b01fe0e4bafb"
+        "outputId": "adddbd9f-e66d-4def-ba59-1eafccdbe793"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/batch*.txt"
       ],
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "==> outputs/batch-1e6bee0789a142189912b5c0560a6e72.txt <==\n",
+            "==> outputs/batch-30d399fb3f24430db193e8130f439cb0.txt <==\n",
             "Each element must be a string.\n",
             "It writes one element per line.\n",
             "There are no guarantees on the line order.\n",
             "\n",
-            "==> outputs/batch-cc9fb83dc7484756bd53012c88ca66d4.txt <==\n",
+            "==> outputs/batch-ab16a5c2018e4c32b01a5acaa2671fd0.txt <==\n",
             "The data might be written into multiple files.\n"
           ],
           "name": "stdout"
@@ -905,7 +934,11 @@
         "@beam.ptransform_fn\n",
         "@beam.typehints.with_input_types(str)\n",
         "@beam.typehints.with_output_types(beam.pvalue.PDone)\n",
-        "def WriteWindowsToFiles(pcollection, file_name_prefix: str, file_name_suffix: str = '.txt'):\n",
+        "def WriteWindowsToFiles(\n",
+        "    pcollection: beam.PCollection[str],\n",
+        "    file_name_prefix: str,\n",
+        "    file_name_suffix: str = '.txt',\n",
+        ") -> beam.pvalue.PDone:\n",
         "  def write_file(batch: Dict[str, Any]):\n",
         "    start_date = batch['window_start'].date()\n",
         "    start_time = batch['window_start'].time()\n",
@@ -948,7 +981,7 @@
         "      )\n",
         "  )"
       ],
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -958,13 +991,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QXKKVawTJ2_",
-        "outputId": "4bb7c1e5-f127-48bb-df70-634de8ccb1d0"
+        "outputId": "96a84b29-3fd2-46f4-b21b-d3f07daa928b"
       },
       "source": [
         "# Lets look at the output files and contents.\n",
         "!head outputs/window*.txt"
       ],
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
